# Gathering-the-Royals

./: .gitignore  README.adoc  compile_shaders.sh  game_manager.cpp  game_manager.hpp  gm.cpp  gm.hpp  main.cpp  meson.build
dbbe/: colors.hpp  engine.hpp  font.cpp  font.hpp  loadtexbmp.cpp  models.cpp  models.hpp  renderer.cpp  renderer.hpp  shader.cpp  window.cpp
deck builder builder/: TODO.md
deck builder builder/.obsidian/: workspace.json
lve/: lve_device.hpp  lve_game_object.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_renderer.cpp  lve_renderer.hpp  lve_swap_chain.cpp  lve_swap_chain.hpp  lve_window.cpp  lve_window.hpp
shaders/: main.frag  main.vert  simple_shader.vert  simple_shader.vert.spv
ui/: button.cpp  button.hpp
unit_builder/: unit_builder.cpp  unit_builder.hpp
